--- a/14_Naive_Bayes_Classification.Rmd
+++ b/14_Naive_Bayes_Classification.Rmd
@@ -6,11 +6,10 @@ chinstrap_color = "#c65ccc"
 gentoo_color = "#067476"
 ```
 
-
 **Learning objectives:**
 
-* explore the pros and cons of naive Bayes classification
-* generalize classification tasks for more than two categories
+-   explore the pros and cons of naive Bayes classification
+-   generalize classification tasks for more than two categories
 
 ```{r, message = FALSE, warning = FALSE}
 library("bayesrules")
@@ -24,10 +23,10 @@ library("tidyr")
 sessionInfo()
 ```
 
-
 ## Data: Palmer Penguins
 
-There exist multiple penguin species throughout Antarctica, including the *Adelie*, *Chinstrap*, and *Gentoo*. When encountering one of these penguins on an Antarctic trip, we might *classify* its species
+There exist multiple penguin species throughout Antarctica, including the *Adelie*, *Chinstrap*, and *Gentoo*.
+When encountering one of these penguins on an Antarctic trip, we might *classify* its species
 
 $$Y = \begin{cases} A & \text{Adelie} \\ C & \text{Chinstrap} \\ G & \text{Gentoo} \end{cases}$$
 
@@ -58,21 +57,21 @@ penguins %>%
   tabyl(species)
 ```
 
-
 ## Naive Bayes Classification
 
-Here, we have *three* categories, whereas logistic regression is limited to classifying *binary* response variables.  As an alternative, **naive Bayes classification** 
+Here, we have *three* categories, whereas logistic regression is limited to classifying *binary* response variables.
+As an alternative, **naive Bayes classification**
 
-* can classify categorical response variables $Y$ with two or more categories
-* doesn’t require much theory beyond Bayes’ Rule
-* it’s computationally efficient, i.e., doesn’t require MCMC simulation
+-   can classify categorical response variables $Y$ with two or more categories
+-   doesn't require much theory beyond Bayes' Rule
+-   it's computationally efficient, i.e., doesn't require MCMC simulation
 
 But why is it called "naive"?
 
-
 ## One Categorical Predictor
 
-Suppose an Antarctic researcher comes across a penguin that weighs less than 4200g with a 195mm-long flipper and 50mm-long bill. Our goal is to help this researcher identify the species of this penguin: Adelie, Chinstrap, or Gentoo
+Suppose an Antarctic researcher comes across a penguin that weighs less than 4200g with a 195mm-long flipper and 50mm-long bill.
+Our goal is to help this researcher identify the species of this penguin: Adelie, Chinstrap, or Gentoo
 
 ```{r, echo = FALSE}
 penguins |>
@@ -89,7 +88,9 @@ penguins |>
 ```
 
 <details>
+
 <summary>image code</summary>
+
 ```{r, eval = FALSE}
 penguins |>
   drop_na(above_average_weight) |>
@@ -103,12 +104,12 @@ penguins |>
   theme(plot.title = element_markdown(face = "bold", size = 24),
         plot.subtitle = element_markdown(size = 16))
 ```
+
 </details>
 
 ### Recall: Bayes Rule
 
-$$f(y|x_{1}) = \frac{\text{prior}\cdot\text{likelihood}}{\text{normalizing constant}} = \frac{f(y) \cdot L(y|x_{1})}{f(x_{1})}$$
-where, by the Law of Total Probability,
+$$f(y|x_{1}) = \frac{\text{prior}\cdot\text{likelihood}}{\text{normalizing constant}} = \frac{f(y) \cdot L(y|x_{1})}{f(x_{1})}$$ where, by the Law of Total Probability,
 
 $$\begin{array}{rcl}
 f(x_{1} & = & \displaystyle\sum_{\text{all } y'} f(y')L(y'|x_{1}) \\
@@ -153,10 +154,9 @@ $$\begin{array}{rcccccl}
 
 The posterior probability that this penguin is an Adelie is more than double that of the other two species
 
-
 ## One Numerical Predictor
 
-Let’s ignore the penguin’s weight for now and classify its species using only the fact that it has a 50mm-long bill
+Let's ignore the penguin's weight for now and classify its species using only the fact that it has a 50mm-long bill
 
 ```{r, echo = FALSE, message = FALSE, warning = FALSE}
 penguins|>
@@ -173,7 +173,9 @@ penguins|>
 ```
 
 <details>
+
 <summary>image code</summary>
+
 ```{r, eval = FALSE, message = FALSE, warning = FALSE}
 penguins|>
   ggplot(aes(x = bill_length_mm, fill = species)) + 
@@ -187,14 +189,16 @@ penguins|>
   theme(plot.title = element_markdown(face = "bold", size = 24),
         plot.subtitle = element_markdown(size = 16))
 ```
+
 </details>
 
 Our data points to our penguin being a Chinstrap
 
-* we must weigh this data against the fact that Chinstraps are the rarest of these three species
-* difficult to compute likelihood $L(y = A | x_{2} = 50)$
+-   we must weigh this data against the fact that Chinstraps are the rarest of these three species
+-   difficult to compute likelihood $L(y = A | x_{2} = 50)$
 
-This is where one “*naive*” part of naive Bayes classification comes into play. The naive Bayes method typically assumes that any quantitative predictor, here $X_{2}$, is **continuous** and **conditionally normal**:
+This is where one "*naive*" part of naive Bayes classification comes into play.
+The naive Bayes method typically assumes that any quantitative predictor, here $X_{2}$, is **continuous** and **conditionally normal**:
 
 $$\begin{array}{rcl}
   X_{2} | (Y = A) & \sim & N(\mu_{A}, \sigma_{A}^{2}) \\
@@ -243,10 +247,10 @@ penguins |>
         plot.subtitle = element_markdown(size = 16))
 ```
 
-
-
 <details>
+
 <summary>image code</summary>
+
 ```{r, eval = FALSE}
 penguins |>
   ggplot(aes(x = bill_length_mm, color = species)) + 
@@ -293,10 +297,11 @@ $$\begin{array}{rcccccl}
   f(y = G | x_{2} = 50) & = & \frac{f(y = A) \cdot L(y = G | x_{1} = 0)}{f(x_{1} = 0)} = \frac{\frac{123}{342} \cdot 0.09317}{0.05579} & \approx & 0.6006 \\
 \end{array}$$
 
-Though a 50mm-long bill is relatively less common among <span style = 'color:#067476'>Gentoo</span> than among <span style = 'color:#c65ccc'>Chinstrap</span>, it follows that our naive Bayes classification, based on our prior information and penguin’s bill length alone, is that this penguin is a <span style = 'color:#067476'>Gentoo</span> – it has the highest posterior probability.
+Though a 50mm-long bill is relatively less common among [Gentoo]{style="color:#067476"} than among [Chinstrap]{style="color:#c65ccc"}, it follows that our naive Bayes classification, based on our prior information and penguin's bill length alone, is that this penguin is a [Gentoo]{style="color:#067476"} -- it has the highest posterior probability.
 
-We’ve now made two naive Bayes classifications of our penguin’s species, one based solely on the fact that our penguin has below-average weight and the other based solely on its 50mm-long bill (in addition to our prior information). And these classifications **disagree**: we classified the penguin as Adelie in the former analysis and Gentoo in the latter. This discrepancy indicates that there’s *room for improvement* in our naive Bayes classification method.
-
+We've now made two naive Bayes classifications of our penguin's species, one based solely on the fact that our penguin has below-average weight and the other based solely on its 50mm-long bill (in addition to our prior information).
+And these classifications **disagree**: we classified the penguin as Adelie in the former analysis and Gentoo in the latter.
+This discrepancy indicates that there's *room for improvement* in our naive Bayes classification method.
 
 ## Two Predictor Variables
 
@@ -319,7 +324,9 @@ ggplot(aes(x = flipper_length_mm, y = bill_length_mm,
 ```
 
 <details>
+
 <summary>image code</summary>
+
 ```{r, eval = FALSE, message = FALSE, warning = FALSE}
 penguins |>
 ggplot(aes(x = flipper_length_mm, y = bill_length_mm, 
@@ -337,6 +344,7 @@ ggplot(aes(x = flipper_length_mm, y = bill_length_mm,
   theme(plot.title = element_markdown(face = "bold", size = 24),
         plot.subtitle = element_markdown(size = 16))
 ```
+
 </details>
 
 Generalizing Bayes' Rule:
@@ -347,8 +355,8 @@ Another "naive" assumption of **conditionally independent**:
 
 $$L(y | x_{2}, x_{3}) = f(x_{2}, x_{3} | y) = f(x_{2} | y) \cdot f(x_{3} | y)$$
 
-* mathematically efficient
-* but what about correlation?
+-   mathematically efficient
+-   but what about correlation?
 
 ```{r}
 # sample statistics of x_3: flipper length
@@ -383,12 +391,11 @@ $$\begin{array}{rcccl}
   f(y = G | x_{2} = 50, x_{3} = 195) & = & \frac{\frac{123}{342} \cdot 0.09317 \cdot 0.0001931}{0.0001931} & \approx & 0.0052 \\
 \end{array}$$
 
-In conclusion, our penguin is *almost certainly* a <span style = 'color:#c65ccc'>Chinstrap</span>.
-
+In conclusion, our penguin is *almost certainly* a [Chinstrap]{style="color:#c65ccc"}.
 
 ## Implementation
 
-To implement naive Bayes classification in `R`, we’ll use the `naiveBayes()` function in the `e1071` package (Meyer et al. 2021)
+To implement naive Bayes classification in `R`, we'll use the `naiveBayes()` function in the `e1071` package (Meyer et al. 2021)
 
 ### Models
 
@@ -412,6 +419,7 @@ round(6)
 ```{r}
 predict(naive_model_1, newdata = our_penguin)
 ```
+
 ```{r}
 predict(naive_model_2, newdata = our_penguin, type = "raw") |>
 round(6)
@@ -448,8 +456,8 @@ penguins %>%
   adorn_ns()
 ```
 
-* accuracy: 76 percent
-* 85 percent of Chinstap penguins are misclassified as Gentoo!
+-   accuracy: 76 percent
+-   85 percent of Chinstap penguins are misclassified as Gentoo!
 
 ```{r}
 # Confusion matrix for naive_model_2
@@ -460,7 +468,7 @@ penguins %>%
   adorn_ns()
 ```
 
-* accuracy: 95 percent
+-   accuracy: 95 percent
 
 ### Cross-Validation
 
@@ -481,21 +489,16 @@ Naive Bayes
 
 $$f(y | x_{1}, x_{2}, ..., x_{p}) = \frac{f(y) \cdot L(y | x_{1}, x_{2}, ..., x_{p})}{\sum_{y'} f(y') \cdot L(y' | x_{1}, x_{2}, ..., x_{p})}$$
 
-* conditionally independent $\rightarrow$ computationally efficient
-* generalizes to more than two categories
-* assumptions violated commonly in practice
+-   conditionally independent $\rightarrow$ computationally efficient
+-   generalizes to more than two categories
+-   assumptions violated commonly in practice
 
 Logistic Regression
 
 $$\log\left(\frac{\pi}{1-\pi}\right) = \beta_{0} + \beta_{1}X_{1} + \cdots + \beta_{k}X_{p}$$
 
-* binary classification
-* coefficients $\rightarrow$ illumination of the relationships among these variables
-
-
-
-
-
+-   binary classification
+-   coefficients $\rightarrow$ illumination of the relationships among these variables
 
 ## Meeting Videos
 
@@ -504,28 +507,31 @@ $$\log\left(\frac{\pi}{1-\pi}\right) = \beta_{0} + \beta_{1}X_{1} + \cdots + \be
 `r knitr::include_url("https://www.youtube.com/embed/HeCaORJNdJM")`
 
 <details>
-<summary> Meeting chat log </summary>
 
+<summary>Meeting chat log</summary>
+
+```         
+00:44:10    defuneste:  plant@net
+00:44:28    Lisa:   https://identify.plantnet.org/
+00:48:49    Brendan Lam:    Thanks everyone!
 ```
-00:44:10	defuneste:	plant@net
-00:44:28	Lisa:	https://identify.plantnet.org/
-00:48:49	Brendan Lam:	Thanks everyone!
-```
+
 </details>
 
 ### Cohort 2
 
 `r knitr::include_url("https://www.youtube.com/embed/6Yma6P5h0IA")`
 
-
 ### Cohort 4
 
 `r knitr::include_url("https://www.youtube.com/embed/URL")`
 
 <details>
-<summary> Meeting chat log </summary>
 
-```
+<summary>Meeting chat log</summary>
+
+```         
 LOG
 ```
+
 </details>
