Cohort 4 vids and chats.

--- a/02_Bayes_Rule.Rmd
+++ b/02_Bayes_Rule.Rmd
@@ -421,12 +421,4 @@ Bayesian probability for babies! (with cookies) : <https://raw.githubusercontent
 
 ### Cohort 4
 
-`r knitr::include_url("https://www.youtube.com/embed/URL")`
-
-<details>
-
-<summary>Meeting chat log</summary>
-
-    LOG
-
-</details>
+`r knitr::include_url("https://www.youtube.com/embed/SOlXj1Bvv7E")`
