--- a/03_The_Beta_Binomial_Bayesian_Model.Rmd
+++ b/03_The_Beta_Binomial_Bayesian_Model.Rmd
@@ -288,12 +288,4 @@ PsychEd: Milgram’s Obedience Experiment https://www.youtube.com/watch?v=cBDkJ-
 
 ### Cohort 4
 
-`r knitr::include_url("https://www.youtube.com/embed/URL")`
-
-<details>
-<summary> Meeting chat log </summary>
-
-```
-LOG
-```
-</details>
+`r knitr::include_url("https://www.youtube.com/embed/YpMV971nuYI")`
