--- a/10_Evaluating_Regression_Models.Rmd
+++ b/10_Evaluating_Regression_Models.Rmd
@@ -381,12 +381,4 @@ These estimates are very context dependent, but are more useful when comparing m
 
 ### Cohort 4
 
-`r knitr::include_url("https://www.youtube.com/embed/URL")`
-
-<details>
-<summary> Meeting chat log </summary>
-
-```
-LOG
-```
-</details>
+`r knitr::include_url("https://www.youtube.com/embed/tSUlDg8ebLA")`
