--- a/12_Poisson_Negative_Binomial_Regression.Rmd
+++ b/12_Poisson_Negative_Binomial_Regression.Rmd
@@ -503,12 +503,4 @@ where the appropriate **link function** $g$ depends on the data structure.
 
 ### Cohort 4
 
-`r knitr::include_url("https://www.youtube.com/embed/URL")`
-
-<details>
-<summary> Meeting chat log </summary>
-
-```
-LOG
-```
-</details>
+`r knitr::include_url("https://www.youtube.com/embed/RM-hHTfU3OQ")`
