--- a/13_Logistic_Regression.Rmd
+++ b/13_Logistic_Regression.Rmd
@@ -592,12 +592,4 @@ Watergate Salad :
 
 ### Cohort 4
 
-`r knitr::include_url("https://www.youtube.com/embed/URL")`
-
-<details>
-<summary> Meeting chat log </summary>
-
-```
-LOG
-```
-</details>
+`r knitr::include_url("https://www.youtube.com/embed/YQoUsHylv4o")`
