--- a/16_Normal_Hierarchical_Models_without_predictors.Rmd
+++ b/16_Normal_Hierarchical_Models_without_predictors.Rmd
@@ -534,12 +534,4 @@ First model with groups!
 
 ### Cohort 4
 
-`r knitr::include_url("https://www.youtube.com/embed/URL")`
-
-<details>
-<summary> Meeting chat log </summary>
-
-```
-LOG
-```
-</details>
+`r knitr::include_url("https://www.youtube.com/embed/Mn5t95fKJfM")`
