--- a/01_The_Big_Bayesian_Picture.Rmd
+++ b/01_The_Big_Bayesian_Picture.Rmd
@@ -234,12 +234,14 @@ This is a list of resources mentioned in the first meeting!
 
 ### Cohort 4
 
-`r knitr::include_url("https://www.youtube.com/embed/URL")`
+`r knitr::include_url("https://www.youtube.com/embed/KdnnwyGGst4")`
 
 <details>
 <summary> Meeting chat log </summary>
 
 ```
-LOG
+00:01:05	Derek Sollberger (he/him):	textbook: https://www.bayesrulesbook.com/
+00:01:13	Derek Sollberger (he/him):	cohort notes: https://r4ds.github.io/bookclub-bayes_rules/index.html
+00:01:20	Derek Sollberger (he/him):	schedule: https://docs.google.com/spreadsheets/d/1tf2GwxwpZNyQsXfyi8wBfuMyRrr6FT1ZxZAQPzxFJCA/edit#gid=0
 ```
 </details>
