--- a/05_Conjugate_Families.Rmd
+++ b/05_Conjugate_Families.Rmd
@@ -339,12 +339,4 @@ We moved from sample size 1 -> $n$
 
 ### Cohort 4
 
-`r knitr::include_url("https://www.youtube.com/embed/URL")`
-
-<details>
-<summary> Meeting chat log </summary>
-
-```
-LOG
-```
-</details>
+`r knitr::include_url("https://www.youtube.com/embed/RTmPLJIq_gs")`
