--- a/06_Approximating_Posterior.Rmd
+++ b/06_Approximating_Posterior.Rmd
@@ -320,12 +320,4 @@ Next chapter, MCMC **under the hood**
 
 ### Cohort 4
 
-`r knitr::include_url("https://www.youtube.com/embed/URL")`
-
-<details>
-<summary> Meeting chat log </summary>
-
-```
-LOG
-```
-</details>
+`r knitr::include_url("https://www.youtube.com/embed/PoJ02NmEqhw")`
