--- a/07_MCMC_under_the_Hood.Rmd
+++ b/07_MCMC_under_the_Hood.Rmd
@@ -267,12 +267,4 @@ un_runif <- runif(1)
 
 ### Cohort 4
 
-`r knitr::include_url("https://www.youtube.com/embed/URL")`
-
-<details>
-<summary> Meeting chat log </summary>
-
-```
-LOG
-```
-</details>
+`r knitr::include_url("https://www.youtube.com/embed/Fyqm15nQ8cY")`
