--- a/08_Posterior_Inference_Prediction.Rmd
+++ b/08_Posterior_Inference_Prediction.Rmd
@@ -350,12 +350,4 @@ Compares Bayesian analyses to frequentist analyses.
 
 ### Cohort 4
 
-`r knitr::include_url("https://www.youtube.com/embed/URL")`
-
-<details>
-<summary> Meeting chat log </summary>
-
-```
-LOG
-```
-</details>
+`r knitr::include_url("https://www.youtube.com/embed/5U19BRPwPrs")`
