--- a/17_Normal_Hierarchical_Models_with_predictors.Rmd
+++ b/17_Normal_Hierarchical_Models_with_predictors.Rmd
@@ -555,12 +555,4 @@ Either we go with a random intercepts models or we use a random intercepts and s
 
 ### Cohort 4
 
-`r knitr::include_url("https://www.youtube.com/embed/URL")`
-
-<details>
-<summary> Meeting chat log </summary>
-
-```
-LOG
-```
-</details>
+`r knitr::include_url("https://www.youtube.com/embed/Q6mIkFLcfEc")`
