--- a/19_Adding_More_Layers.Rmd
+++ b/19_Adding_More_Layers.Rmd
@@ -510,7 +510,7 @@ This (and the as yet unpublished "Advanced Regression and Multilevel Models") ar
 
 ### Cohort 4
 
-`r knitr::include_url("https://www.youtube.com/embed/URL")`
+`r knitr::include_url("https://www.youtube.com/embed/NT5JmHP4C8o")`
 
 <details>
 <summary> Meeting chat log </summary>
